--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,26 @@
 version: '3'
 services:
+  proposta:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: gabrielpedrico/proposta
+    ports:
+      - 8080:8080
+    restart: always
+    depends_on:
+      - meu_db
+
+  meu_db:
+    image: mysql:8.0
+    volumes:
+      - mysql-volume:/var/lib/mysql
+    restart: always
+    ports:
+      - 3308:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_DATABASE: proposta
 
   zookeeper:
     image: "confluentinc/cp-zookeeper:5.2.1"
@@ -138,3 +159,4 @@ volumes:
   grafana-volume:
   prometheus-volume:
   postgres-volume:
+  mysql-volume:
