--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/proposta
+spring.datasource.url=jdbc:mysql://meu_db:3306/proposta
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.show-sql: true
-
+#Feign
+analise.url=http://analise:9999/api/solicitacao
+cartoes.url=http://contas:8888/api/cartoes
+contas.url=http://contas:8888/api/contas
 #jwt
 mercadolivre.jwt.secret=9eOwiJPD0PR^]w+J*t$D|xjHj/&GTJPs_}N yO^ehPW)^h4[Fw
 mercadolivre.jwt.expiration=86400000
