Login via senha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 analise.url=http://analise:9999/api/solicitacao
 cartoes.url=http://contas:8888/api/cartoes
 contas.url=http://contas:8888/api/contas
-#jwt
-mercadolivre.jwt.secret=9eOwiJPD0PR^]w+J*t$D|xjHj/&GTJPs_}N yO^ehPW)^h4[Fw
-mercadolivre.jwt.expiration=86400000
+
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://keycloak:18080/auth/realms/proposta}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://keycloak:18080/auth/realms/proposta/protocol/openid-connect/certs}
