--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://meu_db:3306/proposta
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3308/proposta}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.show-sql: true
 #Feign
-analise.url=http://analise:9999/api/solicitacao
-cartoes.url=http://contas:8888/api/cartoes
-contas.url=http://contas:8888/api/contas
+analise.url=${ANALISE_URL/api/solicitacao:http://localhost:9999/api/solicitacao}
+cartoes.url=${CONTAS_URL/api/cartoes:http://localhost:8888/api/cartoes}
+contas.url=${CONTAS_URL/api/contas:http://localhost:8888/api/contas}
 
 ## spring security resource server configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://keycloak:18080/auth/realms/proposta}
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://keycloak:18080/auth/realms/proposta/protocol/openid-connect/certs}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL/auth/realms/proposta:http://localhost:18080/auth/realms/proposta}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_URL/auth/realms/proposta/protocol/openid-connect/certs:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
