--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ contas.url=${CONTAS_URL/api/contas:http://localhost:8888/api/contas}
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_URL/auth/realms/proposta:http://localhost:18080/auth/realms/proposta}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_URL/auth/realms/proposta/protocol/openid-connect/certs:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
+
+#Prometheus
+management.endpoint.health.status.http-mapping.down=500
+management.endpoints.web.exposure.include=health, metrics, prometheus
+management.endpoints.prometheus.enabled=true
