--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+opentracing.spring.cloud.jdbc.enabled=false
+
 #spring.jpa.show-sql: true
 #Feign
 analise.url=${ANALISE_URL/api/solicitacao:http://localhost:9999/api/solicitacao}
@@ -20,3 +22,12 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_URL/auth/realms
 management.endpoint.health.status.http-mapping.down=500
 management.endpoints.web.exposure.include=health, metrics, prometheus
 management.endpoints.prometheus.enabled=true
+
+#Jaeger
+
+sistema.nome = proposta
+
+opentracing.jaeger.enable=true
+opentracing.jaeger.service-name=${sistema.nome}
+opentracing.jaeger.http-sender.url=http://localhost:14268/api/traces
+opentracing.jaeger.probabilistic-sampler.sampling-rate=1
